--- a/src/sass/_page-footer.scss
+++ b/src/sass/_page-footer.scss
@@ -1,265 +1,234 @@
-//пример для фона загрузки разных размеров и плотностей
-// body {
-//   @media screen and(max-width: $tablet - 1) {
-//     background-image: url('../images/gallery/mobile/gallary-bg.jpg');
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: url('../images/gallery/mobile/gallary-bg@2x.jpg');
-//     }
-//   }
-
-//   @media screen and(min-width: $tablet) {
-//     background-image: url('../images/gallery/tablet/gallary-bg.jpg');
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: url('../images/gallery/tablet/gallary-bg@2x.jpg');
-//     }
-//   }
-//   @media screen and(min-width: $desktop) {
-//     background-image: url('../images/gallery/desktop/gallary-bg.jpg');
-//     @media screen and (min-device-pixel-ratio: 2),
-//       screen and (min-resolution: 192dpi),
-//       screen and (min-resolution: 2dppx) {
-//       background-image: url('../images/gallery/desktop/gallary-bg@2x.jpg');
-//     }
-//   }
-// }
-
 // стили основного блока футера
-.page-footer{
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-    @include for-size(mobile){
-        height: 321px;
-    }
-    @include for-size(tablet){
-        height: 274px;
-    }
-    @include for-size(desktop){
-        height: 212px;
-        width: auto;
-        letter-spacing: 0.06em;  
-    }
-    background-color: $secondary-bg-color;
+.page-footer {
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  @include for-size(mobile) {
+    height: 321px;
+  }
+  @include for-size(tablet) {
+    height: 274px;
+  }
+  @include for-size(desktop) {
+    height: 212px;
+    width: auto;
+    letter-spacing: 0.06em;
+  }
+  background-color: $secondary-bg-color;
 }
-.f-section-title{
-    
-    margin: 0;
-    padding: 0;
-    font-family: $secondary-font;
-    font-style: normal;
-    font-weight: normal;
-    text-align: left;
-    text-transform: uppercase;
-    @include for-size(mobile){
-        width: 234px;
-        margin-bottom: 43px;   
-    }
-    @include for-size(tablet){
-        width: 340px;
-        letter-spacing: 0.06em;
-        margin-bottom: 0;   
-    }
-    @include for-size(desktop){
-        width: auto;
-        letter-spacing: 0.06em;
-        margin-bottom: 0;  
-    }
+.f-section-title {
+  margin: 0;
+  padding: 0;
+  font-family: $secondary-font;
+  font-style: normal;
+  font-weight: normal;
+  text-align: left;
+  text-transform: uppercase;
+  @include for-size(mobile) {
+    width: 234px;
+    margin-bottom: 43px;
+  }
+  @include for-size(tablet) {
+    width: 340px;
+    letter-spacing: 0.06em;
+    margin-bottom: 0;
+  }
+  @include for-size(desktop) {
+    width: auto;
+    letter-spacing: 0.06em;
+    margin-bottom: 0;
+  }
+}
+.f-ul-title {
+  margin: 0;
+  padding: 0;
+}
+.f-homemade-text {
+  @extend %list;
+  @include for-size(mobile) {
+    font-size: 18px;
+    line-height: 1.66667;
+    line-height: 1.145;
+    margin-bottom: 17px;
+    letter-spacing: 0.02em;
+  }
+  @include for-size(tablet) {
+    font-size: 26px;
+    line-height: 1.145;
+    margin-bottom: 16px;
+    letter-spacing: 0.04em;
+  }
+  @include for-size(desktop) {
+    font-size: 30px;
+    line-height: 1.145;
+    margin-bottom: 15px;
+    letter-spacing: 0.04em;
+  }
 
-}
-.f-ul-title{
-    margin: 0;
-    padding: 0;
-}
-.f-homemade-text{
-    @extend %list;
-    @include for-size(mobile){     
-        font-size: 18px;
-        line-height: 1.66667;
-        line-height: 1.145;
-        margin-bottom: 17px;
-        letter-spacing: 0.02em;
-    }
-    @include for-size(tablet){
-        font-size: 26px;
-        line-height: 1.145;
-         margin-bottom: 16px;
-        letter-spacing: 0.04em;
-    }
-    @include for-size(desktop){
-        font-size: 30px;
-        line-height: 1.145;
-        margin-bottom: 15px;
-        letter-spacing: 0.04em;
-
-    }
-    
-    text-transform: uppercase;
-    color: $secondary-title-color;
+  text-transform: uppercase;
+  color: $secondary-title-color;
 }
 .f-passion-text {
-    @extend %list;
-    @include for-size(mobile){
-        font-size: 34px;
-        letter-spacing: 0.04em;
+  @extend %list;
+  @include for-size(mobile) {
+    font-size: 34px;
+    letter-spacing: 0.04em;
+  }
+  @include for-size(tablet) {
+    font-size: 48px;
+    letter-spacing: 0.06em;
+  }
+  @include for-size(desktop) {
+    font-size: 58px;
+    letter-spacing: 0.06em;
+  }
+  line-height: 1.145;
+  text-transform: uppercase;
+  color: $primary-title-color;
+}
+.f-container-footer {
+  display: flex;
+  @include for-size(mobile) {
+    flex-direction: column;
+  }
+  @include for-size(tablet) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  @include for-size(desktop) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+.f-section-icon {
+  text-align: right;
+}
+.f-color-tel {
+  color: $primary-title-color;
+  text-decoration: none;
+  &:focus {
+    outline: 1px solid $primary-title-color;
+    outline-offset: 1px;
+  }
+}
+.f-phone {
+  display: inline-block;
+  margin-top: 46px;
+  font-family: $primary-font;
+  font-style: normal;
+  font-weight: bold;
 
-    }
-    @include for-size(tablet){
-        font-size: 48px;
-        letter-spacing: 0.06em;
-    }
-    @include for-size(desktop){
-        font-size: 58px;
-        letter-spacing: 0.06em;
-    }
-    line-height: 1.145;
-    text-transform: uppercase;
-    color: $primary-title-color;
+  line-height: 1.86;
 
-
+  @include for-size(mobile) {
+    font-size: 12px;
+    letter-spacing: 0.001em;
+  }
+  @include for-size(tablet) {
+    font-size: 14px;
+    letter-spacing: 0.001em;
+  }
+  @include for-size(desktop) {
+    font-size: 16px;
+    letter-spacing: 0.02em;
+  }
 }
-.f-container-footer{
-    display: flex;
-    @include for-size(mobile){
-        flex-direction: column;
-    }
-    @include for-size(tablet){
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    @include for-size(desktop){
-        flex-direction: row;
-        justify-content: space-between;
-    }
+.f-ul-icon {
+  display: inline-flex;
+  padding: 0;
+  margin: 0;
 }
-.f-section-icon{
-    text-align: right;
-}
-.f-color-tel{
-    color: $primary-title-color;
-    text-decoration: none;
-}
-.f-phone{
-    display: inline-block;
-    margin-top: 46px ;
-    font-family: $primary-font;
-    font-style: normal;
-    font-weight: bold;
-    
-    line-height: 1.86;
- 
-    @include for-size(mobile){
-    
-        font-size: 12px;
-        letter-spacing: 0.001em;
-    }
-    @include for-size(tablet){
-        font-size: 14px;
-        letter-spacing: 0.001em;
-    }
-    @include for-size(desktop){
-        font-size: 16px;
-        letter-spacing: 0.02em;
-    }
-    
-}
-.f-ul-icon{
-    display: inline-flex;
-    padding: 0;
-    margin: 0;
-}
-.f-item-icon{
-    @extend %list;
-    &:last-child{
-        margin-left: 25px;
-    }
-    &:first-child{
-        margin-right: 24px;
-    }
-    // &:not(:last-child){
-    //     margin-right: 24px;
-    // }
-
+.f-item-icon {
+  @extend %list;
+  &:last-child {
+    margin-left: 25px;
+  }
+  &:first-child {
+    margin-right: 24px;
+  }
+  // &:not(:last-child){
+  //     margin-right: 24px;
+  // }
 }
 
-.f-contacts-icon-svg{
-    width: 19px;
-    height: 19px;
-    fill: $white;
+.f-contacts-icon-svg {
+  width: 19px;
+  height: 19px;
+  fill: $white;
 }
 
-.f-contacts-icon-link{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 32px;
-    height: 32px;
-    background-color: $color-icon; 
-    border-radius: 50%;
-    transition-duration: $trans-duration;
-    transition-timing-function: $trans-function;
-    &:hover,
-    &:focus{  
-        background-color:  $primary-title-color; 
-    }
-    @extend %list;
-    @include for-size(mobile){
-       
-        font-size: 34px;
-    }
-    @include for-size(tablet){
-        font-size: 48px;
-    }
-    @include for-size(desktop){
-        font-size: 58px;
-    }
+.f-contacts-icon-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  color: $white;
+  background-color: $color-icon;
+  border-radius: 50%;
+  transition-duration: $trans-duration;
+  transition-timing-function: $trans-function;
+  &:hover,
+  &:focus {
+    background-color: $primary-title-color;
+  }
+
+  &:focus {
+    outline: 1px solid $primary-title-color;
+    outline-offset: 1px;
+  }
+
+  @extend %list;
+  @include for-size(mobile) {
+    font-size: 34px;
+  }
+  @include for-size(tablet) {
+    font-size: 48px;
+  }
+  @include for-size(desktop) {
+    font-size: 58px;
+  }
 }
 
 // стили подписи футера
-.f-section-reserved{
-    display: flex;
-    background-color: $secondary-bg-color;
-    border-top: 1px solid $primary-decor-color;
-    align-items: center;
-    justify-content: center;
-    
-    @include for-size(mobile){
-        height: 89px;
-        line-height: 1.52;
-        }
-    @include for-size(tablet){
-        height: 73px;
-        line-height: 1.86;
-    }
-    @include for-size(desktop){
-        height: 45px;
-        line-height: 1.86;
-    }
- 
-}
-.f-reserved{
-    font-family: $primary-font;
-    color: $alternate-text-color;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    
-    letter-spacing: 0.02em;
-    background-color: $secondary-bg-color;
+.f-section-reserved {
+  display: flex;
+  background-color: $secondary-bg-color;
+  border-top: 1px solid $primary-decor-color;
+  align-items: center;
+  justify-content: center;
 
-    text-align: center;
-    @include for-size(mobile){
-        width: 150px;
-    
-        }
-    @include for-size(tablet){
-        width: 100%;
-     
-    }
-    @include for-size(desktop){
-        width: 100%;
-    }
+  @include for-size(mobile) {
+    height: 89px;
+    line-height: 1.52;
+  }
+  @include for-size(tablet) {
+    height: 73px;
+    line-height: 1.86;
+  }
+  @include for-size(desktop) {
+    height: 45px;
+    line-height: 1.86;
+  }
+}
+.f-reserved {
+  font-family: $primary-font;
+  color: $alternate-text-color;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+
+  letter-spacing: 0.02em;
+  background-color: $secondary-bg-color;
+
+  text-align: center;
+  @include for-size(mobile) {
+    width: 150px;
+  }
+  @include for-size(tablet) {
+    width: 100%;
+  }
+  @include for-size(desktop) {
+    width: 100%;
+  }
 }
