--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -58,19 +58,19 @@
     </button>
     <ul class="mobile-nav-list-site-nav">
       <li class="site-nav-item">
-        <a href="#home" class="link-mobile-site-nav">Home</a>
+        <a href="./index.html" class="link-mobile-site-nav">Home</a>
       </li>
       <li class="site-nav-item">
-        <a href="#about-us" class="link-mobile-site-nav">About us</a>
+        <a href="#comments" class="link-mobile-site-nav">About us</a>
       </li>
       <li class="site-nav-item">
-        <a href="#how-it’s-made" class="link-mobile-site-nav">How it’s made?</a>
+        <a href="#manufacture" class="link-mobile-site-nav">How it’s made?</a>
       </li>
       <li class="site-nav-item">
-        <a href="#our-product" class="link-mobile-site-nav">Our products</a>
+        <a href="#products" class="link-mobile-site-nav">Our products</a>
       </li>
       <li class="site-nav-item">
-        <a href="#footer" class="link-mobile-site-nav">Contact</a>
+        <a href="#page-footer" class="link-mobile-site-nav">Contact</a>
       </li>
     </ul>
   </div>
