--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,15 +1,24 @@
 <div class="hero">
   <div class="hero__container">
-    <h1 class="hero__title">ice cream <br> made with <br><span class="hero__title__text">passion</span></h1>
-    <a class="anchor__link products" href="#our-product">Products</a> 
+    <h1 class="hero__title">
+      ice cream <br />
+      made with <br /><span class="hero__title__text">passion</span>
+    </h1>
+    <a class="anchor__link hero-products" href="#products">Products</a>
     <a class="anchor__link recipe" href="#manufacture">How its made?</a>
     <div class="hero__text__box">
-      <p class="hero__text">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit,<br> sed do eiusmod tempor<br> incididunt ut labore et</p>
+      <p class="hero__text">
+        Lorem ipsum dolor sit amet,<br />
+        consectetur adipiscing elit,<br />
+        sed do eiusmod tempor<br />
+        incididunt ut labore et
+      </p>
       <a href="" class="svg__link"></a>
     </div>
-    <div class="hero__text cafe">16 <span class="hero__span">cafes</span> </div>
-    <div class="hero__text truck">23 <span class="hero__span">food trucks</span> </div>
+    <div class="hero__text cafe">16 <span class="hero__span">cafes</span></div>
+    <div class="hero__text truck">
+      23 <span class="hero__span">food trucks</span>
+    </div>
   </div>
   <!-- Ваш код здесь -->
-</div> 
- 
+</div>
