--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -150,7 +150,7 @@
     font-size: 14px;
   }
 }
-.anchor__link.products {
+.anchor__link.hero-products {
   @media screen and (max-width: 767px) {
     margin-left: 20px;
   }
