исправил лого, кнопки, фокус

--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -3,9 +3,8 @@
 <header class="site-nav">
   <div class="container">
     <div class="container-site-nav">
-      <a href="./"
-        ><img
-          class="logo-site-nav"
+      <a href="./" class="logo-site-nav"
+        ><img          
           src="../src/images/site-nav/logo.png"
           alt="logo"
       /></a>
