--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
 <div class="backdrop is-hidden" data-modal>
-  <div class="modal">
+  <div class="modal animate__animated" data-animate-place>
     <!-- Ваш код здесь -->
     <h2 class="title-modal">your order</h2>
     <ul class="modal-list">
