--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -16,48 +16,60 @@
         <div>
           <ul class="f-ul-icon">
             <li class="f-item-icon">
-              <a class="f-contacts-icon-link" href="https://github.com/" target="_blank" rel="noopener noreferer"
-                aria-label="github.com">
+              <a
+                class="f-contacts-icon-link"
+                href="https://github.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="github.com"
+              >
                 <span class="visually-hidden">github.com</span>
                 <svg class="f-contacts-icon-svg">
                   <use href="./images/svg/sprite.svg#icon-github"></use>
                 </svg>
-
               </a>
             </li>
             <li class="f-item-icon">
-              <a class="f-contacts-icon-link" href="https://t.me/frontend_info" target="_blank" rel="noopener noreferer"
-                aria-label="telegram">
+              <a
+                class="f-contacts-icon-link"
+                href="https://t.me/frontend_info"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Telegram.org"
+              >
                 <span class="visually-hidden">telegram</span>
                 <svg class="f-contacts-icon-svg">
                   <use href="./images/svg/sprite.svg#icon-telegram"></use>
                 </svg>
-
               </a>
             </li>
             <li class="f-item-icon">
-              <a class="f-contacts-icon-link" href="https://fasebook.com/" target="_blank" rel="noopener noreferer"
-                aria-label="fasebook.com">
+              <a
+                class="f-contacts-icon-link"
+                href="https://fasebook.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook.com"
+              >
                 <span class="visually-hidden">fasebook.com</span>
                 <svg class="f-contacts-icon-svg">
                   <use href="./images/svg/sprite.svg#icon-facebook"></use>
                 </svg>
-
               </a>
             </li>
-
           </ul>
         </div>
         <div class="f-phone">
           <span>Feel free to contact</span>
-          <a class="f-color-tel" href="tel:+61(0)383766284">+61 (0) 383 766 284</a>
+          <a class="f-color-tel" href="tel:+610383766284"
+            >+61 (0) 383 766 284</a
+          >
         </div>
       </div>
-
     </div>
     <!-- Подпись футера -->
   </div>
   <div class="f-section-reserved">
-    <div class="f-reserved"> © 2019 - IceCream. All Rights Reserved.</div>
+    <div class="f-reserved">© 2019 - IceCream. All Rights Reserved.</div>
   </div>
 </footer>
