--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -20,7 +20,7 @@
             </li>
           </ul>
           <ul class="locations-contact-list">
-            <li><a href="tel:+61(0)383766284">+61(0) 383 766 284 </a></li>
+            <li><a href="tel:+610383766284">+61(0) 383 766 284 </a></li>
             <li><a href="mailto:noreply@envato.com">noreply@envato.com</a></li>
           </ul>
         </li>
@@ -41,7 +41,7 @@
             </li>
           </ul>
           <ul class="locations-contact-list">
-            <li><a href="tel:+61(0)383766284">+61(0) 383 766 284 </a></li>
+            <li><a href="tel:+610383766284">+61(0) 383 766 284 </a></li>
             <li><a href="mailto:noreply@envato.com">noreply@envato.com</a></li>
           </ul>
         </li>
@@ -62,7 +62,7 @@
             </li>
           </ul>
           <ul class="locations-contact-list">
-            <li><a href="tel:+61(0)383766284">+61(0) 383 766 284 </a></li>
+            <li><a href="tel:+610383766284">+61(0) 383 766 284 </a></li>
             <li><a href="mailto:noreply@envato.com">noreply@envato.com</a></li>
           </ul>
         </li>
