--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -3,7 +3,7 @@
   margin-left: auto;
   margin-right: auto;
   z-index: 1000;
-  background-color: #ffb8ca;
+  background-color: $header-bg-color;
 
   @media screen and (max-width: 767px) {
     width: 320px;
@@ -87,8 +87,7 @@
     font-size: 58px;
   }
 }
-.hero__button {
-}
+
 .anchor__link {
   display: inline-flex;
   align-items: center;
@@ -163,12 +162,25 @@
     margin-left: 75px;
   }
 }
-.anchor__link:hover {
-  background: #c7133e;
+.anchor__link:hover,
+.anchor__link:focus {
+  background: $smallcircle-decor-color;
 }
-.anchor__link.recipe:hover {
-  background: #ecebeb;
+
+.anchor__link.recipe:hover,
+.anchor__link.recipe:focus {
+  background: $secondary-accent-color;
 }
+
+.anchor__link:focus {
+  outline: 1px solid $primary-title-color;
+  outline-offset: 1px;
+}
+.anchor__link.focus:hover {
+  outline: 1px solid $primary-title-color;
+  outline-offset: 1px;
+}
+
 .hero__text__box {
   display: none;
   @media screen and (min-width: 768px) {
@@ -204,6 +216,11 @@
     height: 26px;
     margin-top: 20px;
     background-image: url(../images/hero/desktop/arrow-right.jpg);
+  }
+
+  &:focus {
+    outline: 1px solid $primary-title-color;
+    outline-offset: 1px;
   }
 }
 .hero__text {
