--- a/src/partials/site-nav.html
+++ b/src/partials/site-nav.html
@@ -1,12 +1,8 @@
-
-
 <header class="site-nav">
   <div class="container">
     <div class="container-site-nav">
       <a href="./" class="logo-site-nav"
-        ><img          
-          src="../src/images/site-nav/logo.png"
-          alt="logo"
+        ><img src="../src/images/site-nav/logo.png" alt="logo"
       /></a>
       <ul class="site-nav-list">
         <li class="site-nav-item">
@@ -39,9 +35,8 @@
       <button
         class="container-btn-site-nav btn-site-nav-desktop btn-site-nav"
         data-modal-open
-        
       >
-        <span class="" > Buy now </span>
+        <span class=""> Buy now </span>
         <svg class="btn-icon-site-nav" width="14" height="14">
           <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
         </svg>
@@ -49,9 +44,13 @@
     </div>
   </div>
   <div class="mobile-nav-site-nav" data-menu id="mobile-nav-site-nav">
-    <button class="container-btn-site-nav btn-site-nav">
+    <button class="container-btn-site-nav btn-site-nav" data-modal-open-mobile>
       <span> Buy now </span>
-      <svg class="btn-icon-site-nav btn-icon-menu-site-nav" width="14" height="14">
+      <svg
+        class="btn-icon-site-nav btn-icon-menu-site-nav"
+        width="14"
+        height="14"
+      >
         <use href="../src/images/svg/sprite.svg#icon-bracket-right"></use>
       </svg>
     </button>
@@ -74,9 +73,6 @@
     </ul>
   </div>
 </header>
-
-
-
 
 <!--  образец вставки контентного изображения
   <picture>
