--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,30 +1,52 @@
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%) scale(1);
+  // border-radius: 24px;
+  // background-color: $white;
+
+  // @media screen and (min-width: 320px) and (max-width: 1199px) {
+  //   width: 450px;
+  //   height: 637px;
+  // }
+
+  // @include for-size(desktop) {
+  //   width: 528px;
+  //   height: 690px;
+  // }
+
+  margin: auto;
   border-radius: 24px;
-  background-color: $white;
-
-  @media screen and (min-width: 320px) and (max-width: 1199px) {
-    width: 450px;
-    height: 637px;
-  }
-
-  @include for-size(desktop) {
-    width: 528px;
-    height: 690px;
-  }
+  background-color: $alternate-bg-color;
+  position: relative;
+  flex-shrink: 0;
+  flex-grow: 0;
+  width: 450px;
+  max-width: 100%;
 }
 
 .backdrop {
+  // z-index: 2000;
+  // position: fixed;
+  // background-color: rgba(0, 0, 0, 0.2);
+  // top: 0px;
+  // bottom: 0px;
+  // left: 0px;
+  // right: 0px;
+
   z-index: 2000;
+  overflow-y: auto;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.2);
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
+  background: rgba(0, 0, 0, 0.2);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
 }
 
 .backdrop.is-hidden {
@@ -104,11 +126,16 @@
 
 .input-modal {
   display: block;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  text-align: right;
 }
 
 .modal-form-container {
   margin-left: 50px;
   margin-bottom: 10px;
+  margin-right: 50px;
 }
 
 .label-modal {
@@ -169,7 +196,6 @@
   margin: 0 auto;
   margin-bottom: 25px;
   transition: background $trans-duration $trans-function;
-
 
   &:hover {
     background: $secondary-accent-color;
