--- a/src/sass/_site-nav.scss
+++ b/src/sass/_site-nav.scss
@@ -14,7 +14,8 @@
   left: 50%;
   transform: translateX(-50%);
   background-color: rgba(0, 0, 0, 0);
-
+  overflow-x: hidden;
+  height: 100%;
   @media screen and(max-width: ($desktop - 1px)) {
     overflowx: hidden;
   }
