--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -16,27 +16,17 @@
         <div>
           <ul class="f-ul-icon">
             <li class="f-item-icon">
-              <a
-                class="f-contacts-icon-link"
-                href="https://github.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="github.com"
-              >
-                <span class="visually-hidden">github.com</span>
+              <a class="f-contacts-icon-link" href="https://github.com/" target="_blank" rel="noopener noreferrer"
+                aria-label="github.com">
+                <span class="visually-hidden">github</span>
                 <svg class="f-contacts-icon-svg">
                   <use href="./images/svg/sprite.svg#icon-github"></use>
                 </svg>
               </a>
             </li>
             <li class="f-item-icon">
-              <a
-                class="f-contacts-icon-link"
-                href="https://t.me/frontend_info"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Telegram.org"
-              >
+              <a class="f-contacts-icon-link" href="https://t.me/frontend_info" target="_blank"
+                rel="noopener noreferrer" aria-label="Telegram.org">
                 <span class="visually-hidden">telegram</span>
                 <svg class="f-contacts-icon-svg">
                   <use href="./images/svg/sprite.svg#icon-telegram"></use>
@@ -44,14 +34,9 @@
               </a>
             </li>
             <li class="f-item-icon">
-              <a
-                class="f-contacts-icon-link"
-                href="https://fasebook.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="facebook.com"
-              >
-                <span class="visually-hidden">fasebook.com</span>
+              <a class="f-contacts-icon-link" href="https://facebook.com/" target="_blank" rel="noopener noreferrer"
+                aria-label="facebook.com">
+                <span class="visually-hidden">facebook</span>
                 <svg class="f-contacts-icon-svg">
                   <use href="./images/svg/sprite.svg#icon-facebook"></use>
                 </svg>
@@ -61,9 +46,7 @@
         </div>
         <div class="f-phone">
           <span>Feel free to contact</span>
-          <a class="f-color-tel" href="tel:+610383766284"
-            >+61 (0) 383 766 284</a
-          >
+          <a class="f-color-tel" href="tel:+610383766284">+61 (0) 383 766 284</a>
         </div>
       </div>
     </div>
