Исправил библиотеки js, ширину фона героя

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -6,7 +6,7 @@
   background-color: $header-bg-color;
 
   @media screen and (max-width: 767px) {
-    width: 320px;
+    width: 100%;
   }
 
   @media screen and (min-width: 768px) {
